# Daedalus

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
include/daedalus/: affinity.h  attributes.h  fileio.h  str_utils.h  thread_utils.h  timer.h  triple_buffer.h
include/daedalus/containers/: array_interface.h  container_settings.h  heap_array.h  heap_vector.h  hybrid_vector.h  stack_array.h  stack_vector.h  vector_interface.h
include/daedalus/debugging/: Lifetime.h
include/moss/: timer.h
src/: affinity.cpp  fileio.cpp  str_utils.cpp  thread_utils.cpp
src/daedalus/: daedalus.h  fileio.cpp  fileio.h  fileio_linux.cpp  fileio_windows.cpp  math.h  program.cpp  program.h  program_linux.cpp  program_windows.cpp  str_utils.cpp  str_utils.h  thread_utils.h  triple_buffer.h
src/daedalus/containers/: FunctionStack.cpp  FunctionStack.h  array_interface.h  container_settings.h  heap_array.h  heap_vector.h  hybrid_vector.h  stack_array.h  stack_vector.h  triple_buffer.h  vector_interface.h
src/daedalus/core/: attributes.h
src/daedalus/debugging/: Lifetime.h
src/daedalus/io/: file.cpp  file.h
src/daedalus/math/: .clang-tidy  concepts.h  easing.h  math.h  smoothvalue.h
src/daedalus/platform/linux/: file.cpp  program.cpp
src/daedalus/platform/linux/io/: file.cpp
src/daedalus/platform/linux/program/: meta.cpp
src/daedalus/platform/windows/: .clang-tidy  file.cpp  program.cpp  selectors.cpp  selectors.h  terminal.cpp  terminal.h
src/daedalus/platform/windows/io/: file.cpp
src/daedalus/platform/windows/program/: meta.cpp
src/daedalus/profiling/: timer.cpp  timer.h
src/daedalus/program/: meta.cpp  program.cpp  program.h
src/daedalus/strings/: utils.cpp  utils.h
src/daedalus/threading/: utils.cpp  utils.h
